# python-demo

./: README.md  generate_content.py  pyproject.toml
python_learning_path/: README.md
python_learning_path/00_intro_and_env/00_computer_and_programming_basics/: README.md  examples.py  exercises.py
python_learning_path/00_intro_and_env/01_command_line_and_files/: README.md  examples.py  exercises.py
python_learning_path/00_intro_and_env/02_python_install_and_venv/: README.md  examples.py  exercises.py
python_learning_path/00_setup_and_install/: README.md  examples.py  exercises.py
python_learning_path/01_introduction_to_python/: README.md  examples.py  exercises.py
python_learning_path/02_basic_datatypes/01_sequences/: README.md  (+2 more)
python_learning_path/02_environment_and_virtualenvs/: README.md  examples.py  exercises.py
python_learning_path/03_data_types_and_flow/: README.md  examples.py  exercises.py
python_learning_path/04_functions/: README.md  examples.py  exercises.py
python_learning_path/05_exceptions/: README.md  examples.py  exercises.py
python_learning_path/06_numbers_and_representation/: README.md  examples.py  exercises.py
python_learning_path/07_typing_basics/: README.md  examples.py  exercises.py
python_learning_path/08_oop_introduction/: README.md  examples.py  exercises.py
python_learning_path/09_files_and_context_managers/: README.md  examples.py  exercises.py
python_learning_path/10_packages_and_code_quality/: README.md  examples.py  exercises.py
python_learning_path/11_special_data_types/: README.md  examples.py  exercises.py
(+144 files in other folders)
